# ai_support_copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: config.py  deps.py  main.py  models.py
api/routes/: ask.py  health.py  ingest.py  retrieve.py
cache/: exact.py  invalidate.py  middleware.py  semantic.py
data/sample/: faq.md  internal-admin.md  policies.md
db/: session.py
db/migrations/: 001_chunks.sql  002_vector_index.sql
docs/: CASE_STUDY.md  SECURITY.md
eval/: baseline.json  golden.jsonl  ragas_run.py  regression.py  scorecard.py  thresholds.yaml
generation/: citations.py  generator.py  prompt.py
ingestion/: chunker.py  cli.py  embedder.py  pipeline.py  store.py
retrieval/: acl.py  fusion.py  keyword.py  pipeline.py  rerank.py  types.py  vector.py
scripts/: dev.sh
security/: guard.py  injection.py
tests/: conftest.py  test_acl.py  test_ask.py  test_cache.py  test_health.py  test_ingestion.py  test_injection.py  test_ragas_baseline.py  test_regression.py  test_retrieval.py
