[project]
name = "ai-support-copilot"
version = "0.1.0"
description = "Local RAG support knowledge assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "openai>=1.54.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "ingestion*",
    "retrieval*",
    "generation*",
    "cache*",
    "eval*",
    "security*",
    "db*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
